--- a/index.html
+++ b/index.html
@@ -1,7 +1,188 @@
 <!DOCTYPE html>
 <html>
-	<head>
-	</head>
-	<body>
-	</body>
+    <head>
+        <title></title>
+        <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+        <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+        <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    </head>
+    <body>
+        <div id="root"></div>
+        <script type="text/babel">
+        //TODO Card flip animation
+            class GameController extends React.Component {
+                constructor(props) {
+                    super(props)
+                    this.state  = {
+                        points: 0,
+                        moves: 0
+                    }
+                }
+                generateCards(lst) {
+                    let list = [...lst, ...lst]
+                    return list.sort( () => { return .5 - Math.random()})
+                }
+                handlePoints = () => {
+                    this.state.points += 1
+                    if(this.state.points === this.props.options.length) {
+                        alert('Juego completado')
+                    }
+                }
+                handleMoves = () => {
+                    this.state.moves += 1
+                    this.forceUpdate()
+                }
+                render() {
+                    const list = this.generateCards(this.props.options)
+                    const style = {
+                        position: 'absolute',
+                        left: '50%',
+                        top: '50%',
+                        transform: 'translate(-50%, -50%)'
+                    }
+                    const styleP = {
+                        position: 'absolute',
+                        left: '50%',
+                        top: '-5%',
+                        transform: 'translate(-50%, 0)'
+                    }
+                    return (
+                        <div style={style}>
+                            <p style={styleP}> Movimientos: {this.state.moves} </p>
+                            <Memory options={list} OnEarnedPoint={this.handlePoints.bind(this)} onMove={this.handleMoves.bind(this)}/>
+                        </div>
+                    )
+                }
+            }
+            class Card extends React.Component {
+                
+                constructor(props) {
+                    super(props)
+                    this.state = {
+                        flipped: this.props.flipped,
+                        clicky: true
+                    }
+                }
+                flip() {
+                    this.state.flipped = !this.state.flipped
+                    this.forceUpdate()
+                }
+                removeClick() {
+                    this.state.clicky = false
+                    this.forceUpdate()
+                }
+                handleClick() {
+                    this.props.onClick(this.props.id)
+                    this.flip()
+                }
+                render() {
+                    const imgStyle = {
+                        width: '175px',
+                        height: 'auto',
+                        border: '5px solid #A6071D',
+                    }
+                    const divStyle = {
+                        cursor: 'pointer'
+                    }
+                    const source = this.state.flipped ? this.props.src : 'images/logo.jpg'
+                    return (
+                        <div style={divStyle} onClick={this.state.clicky ? this.handleClick.bind(this): () => {return}}>
+                            <img src={source} style={imgStyle}/>
+                        </div>
+                    )
+                }
+            }
+            class Memory extends React.Component {
+                constructor(props) {
+                    super(props)
+                    this.state = {
+                        cardList: [],
+                        selected: {first: null, second: null},
+                    }
+                    this.props.options.forEach((element, index) => {
+                        this.state.cardList.push(
+                            {
+                                src: element,
+                                id: index + 1,
+                                flipped: false,
+                                key: index + 1,
+                                onClick: this.cardClick.bind(this)
+                            }
+                        )
+                    });
+                }
+                cardClick = card => {
+                    this.props.onMove()
+                    if(this.state.selected.first === card) {
+                        this.state.selected.first = null
+                    } else {
+                        if(!this.state.selected.first) {
+                            this.state.selected.first = card
+                        } else if(!this.state.selected.second) {
+                            this.state.selected.second = card
+                        }
+                        if(this.state.selected.first && this.state.selected.second) {
+                            let {first, second} = this.state.selected
+                            if(this.state.cardList[first-1].src !== this.state.cardList[second-1].src) {
+                                this.state.selected.first = null
+                                this.state.selected.second = null
+                                setTimeout(() => {
+                                    this.refs[`${first}`].flip()
+                                    this.refs[`${second}`].flip()
+                                }, 500);
+                            } else {
+                                this.state.selected.first = null
+                                this.state.selected.second = null
+                                this.refs[`${first}`].removeClick()
+                                this.refs[`${second}`].removeClick()
+                                setTimeout(() => {
+                                    this.props.OnEarnedPoint()
+                                }, 500)
+                            }
+                        }
+                    }
+                }           
+                render() {
+                    const style = {
+                        display: 'inline-grid',
+                        gridTemplateColumns: 'auto auto auto auto',
+                        boxShadow: '0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)'
+                    }
+                    const cards = []
+                    this.state.cardList.forEach(element => {
+                        cards.push(
+                            <Card
+                                src={element.src}
+                                id={element.id}
+                                key={element.key}
+                                ref={`${element.key}`}
+                                flipped={element.flipped}
+                                onClick={element.onClick}
+                            />
+                        )
+                    });
+                    return (
+                        <div style={style}>
+                            {cards}
+                        </div>
+                    )
+                }
+            }
+            const images = [
+                'images/newengland.png',
+                'images/buffalo.jpg',
+                'images/miami.jpg',
+                'images/newyork.png',
+                'images/seattle.jpg',
+                'images/cleveland.jpg',
+                'images/oakland.png',
+                'images/la.jpg'
+            ]
+            
+            ReactDOM.render(
+                <GameController options={images}/>,
+                document.getElementById('root')
+            )
+        </script>
+    </body>
 </html>
