--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     const divStyle = {
                         cursor: 'pointer'
                     }
-                    const source = this.state.flipped ? this.props.src : 'images/logo.jpg'
+                    const source = this.state.flipped ? this.props.src : 'images/logo2.jpg'
                     return (
                         <div style={divStyle} onClick={this.state.clicky ? this.handleClick.bind(this): () => {return}}>
                             <img src={source} style={imgStyle}/>
@@ -169,14 +169,14 @@
                 }
             }
             const images = [
-                'images/newengland.png',
-                'images/buffalo.jpg',
-                'images/miami.jpg',
-                'images/newyork.png',
-                'images/seattle.jpg',
-                'images/cleveland.jpg',
-                'images/oakland.png',
-                'images/la.jpg'
+                'images/alessandra.png',
+                'images/candice.jpg',
+                'images/gisele.jpg',
+                'images/miranda.png',
+                'images/taylor.jpg',
+                'images/lais.jpg',
+                'images/sara.png',
+                'images/martha.jpg'
             ]
             
             ReactDOM.render(
