--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
                 }
             }
             const images = [
-                'images/alessandra.png',
+                'images/alessandra.jpg',
                 'images/candice.jpg',
                 'images/gisele.jpg',
-                'images/miranda.png',
+                'images/miranda.jpg',
                 'images/taylor.jpg',
                 'images/lais.jpg',
-                'images/sara.png',
+                'images/sara.jpg',
                 'images/martha.jpg'
             ]
             
