--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 handlePoints = () => {
                     this.state.points += 1
                     if(this.state.points === this.props.options.length) {
-                        alert('Juego completado')
+                        alert('Memoria Terminado')
                     }
                 }
                 handleMoves = () => {
