--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <body>
         <div id="root"></div>
         <script type="text/babel">
+		
             class GameController extends React.Component {
                 constructor(props) {
                     super(props)
                     this.state  = {
-                        points: 0,
-                        moves: 0
+                        points: 0, moves: 0
                     }
                 }
                 generateCards(lst) {
